--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">HelloAndroid</string>
     <string name="text">Buna ziua</string>
+    <string name="buton">Exersam commituri</string>
 </resources>
