--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">HelloAndroid</string>
     <string name="text">Buna ziua</string>
     <string name="buton">Exersam commituri</string>
+    <string name="TEXTUS">TEXTUL</string>
 </resources>
